--- a/TI_1_HW4.ipynb
+++ b/TI_1_HW4.ipynb
@@ -1283,46 +1283,103 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function to be optimized\n",
+    "#Define a function called BM\n",
     "\n",
-    "#rw_ = []\n",
-    "def bm_3d(n_steps = 1000, speed = 6, s_pos = 0):\n",
-    "    \"\"\"\n",
-    "    Arguments:\n",
-    "        n_steps:\n",
-    "        speed:\n",
-    "        s_pos:\n",
-    "    Return:\n",
-    "        BM_2d_df\n",
-    "    \"\"\"\n",
-    "    # Init velocity vector\n",
+    "def bm_2d(n_steps = 1000, speed = 6, s_x_pos = 0, s_y_pos = 0):\n",
+    "# Init velocity vector\n",
     "    velocity = Vec2d(speed, 0)\n",
+    "    BM_2d_df = pd.DataFrame({'x_pos':[s_x_pos], 'y_pos':[s_y_pos]})\n",
     "\n",
-    "    # Matriz para Brownian Walker\n",
-    "    BM_2d = np.ones(shape = (n_steps, 2))*s_pos\n",
-    "    rw_.clear()\n",
-    "\n",
-    "    for i in range(1, n_steps):\n",
-    "        turn_angle = np.random.uniform(low=-np.pi, high=np.pi)\n",
+    "    for _ in range(n_steps -1):\n",
+    "        turn_angle = np.random.uniform(-np.pi, np.pi)\n",
     "        velocity = velocity.rotated(turn_angle)\n",
+    "        updated_x = BM_2d_df.x_pos.iloc[-1] + velocity.x\n",
+    "        updated_y = BM_2d_df.y_pos.iloc[-1] + velocity.y\n",
+    "        BM_2d_df = pd.concat([BM_2d_df, pd.DataFrame({'x_pos': [updated_x], 'y_pos':[updated_y]})], ignore_index=True)\n",
     "\n",
-    "        BM_2d[i, 0] = BM_2d[i-1, 0]+velocity.x\n",
-    "        BM_2d[i, 1] = BM_2d[i-1, 1]+velocity.y\n",
-    "        rw_.append(BM_2d[i])"
+    "    return BM_2d_df\n",
+    "\n",
+    "#Define a function called CRW \n",
+    "\n",
+    "def correlated_random_walk(n_steps= 100, speed=6, s_x_pos=0, s_y_pos=0, cauchy_coef=0.5):\n",
+    "    trajectory = pd.DataFrame({'x_pos':[s_x_pos], 'y_pos':[s_y_pos]})\n",
+    "    angle = np.random.uniform(-np.pi, np.pi)\n",
+    "    \n",
+    "#The walk\n",
+    "    for i in range (n_steps-1): \n",
+    "        angle += wrapcauchy.rvs(cauchy_coef)\n",
+    "        updated_x = trajectory.iloc[-1].x_pos + speed * np.cos(angle)\n",
+    "        updated_y = trajectory.iloc[-1].y_pos + speed * np.sin(angle)\n",
+    "        trajectory = pd.concat([trajectory, pd.DataFrame({'x_pos': [updated_x], 'y_pos':[updated_y]})], ignore_index=True)\n",
+    "\n",
+    "    return trajectory\n",
+    "\n",
+    "#Define a function called levy flight\n",
+    "\n",
+    "def levy_flight(n_steps=100, speed=6, s_x_pos=0, s_y_pos=0, alpha=1.5, cauchy_coef=0.5):\n",
+    "    trajectory = pd.DataFrame({'x_pos':[s_x_pos], 'y_pos': [s_y_pos]})\n",
+    "    angles = np.random.uniform(0, 2*np.pi, n_steps)\n",
+    "    step_lengths = levy_stable.rvs(alpha, cauchy_coef, size=n_steps) * speed\n",
+    "    \n",
+    "    for i in range(n_steps -1): \n",
+    "        updated_x = trajectory.iloc[-1].x_pos + step_lengths[i] * np.cos(angles[i]) \n",
+    "        updated_y = trajectory.iloc[-1].y_pos + step_lengths[i] * np.sin(angles[i]) \n",
+    "        trajectory = pd.concat([trajectory, pd.DataFrame({'x_pos': [updated_x], 'y_pos': [updated_y]})], ignore_index=True)\n",
+    "\n",
+    "    return trajectory\n",
+    "\n",
+    "#Funcition to calculate the cumulative path length \n",
+    "def calculate_path_length(df): \n",
+    "    dx = np.diff(df['x_pos'])\n",
+    "    dy = np.diff(df['y_pos'])\n",
+    "    distances = np.sqrt(dx**2 + dy**2)\n",
+    "    return np.cumsum(distances)\n",
+    "\n",
+    "#Calculate Mean Squared Displacement(MSD)\n",
+    "def calculate_msd(df):\n",
+    "    displacements = (df['x_pos']- df['x_pos'].iloc[0])**2 + (df['y_pos']- df['y_pos'].iloc[0])**2\n",
+    "    return np.cumsum(displacements)/np.arange(1, len(displacements)+ 1)\n",
+    "\n",
+    "#MSD with euclidean distance \n",
+    "def compute_msd(df):\n",
+    "    MSD_list =[]\n",
+    "    for tau in range (1, df.shape[0]):\n",
+    "        displacement_vec = np.array([\n",
+    "            euclidean(df.iloc[i -tau], df.iloc[i])\n",
+    "            for i in range(tau, df.shape[0])\n",
+    "        ])\n",
+    "        MSD_list.append(np.mean(displacement_vec**2))\n",
+    "    return np.asarray(MSD_list)\n",
+    "\n",
+    "#function to calculate turning angles\n",
+    "def calculate_turning_angles(df):\n",
+    "    dx = np.diff(df['x_pos'])\n",
+    "    dy = np.diff(df['y_pos'])\n",
+    "    angles = np.arctan2(dy, dx)\n",
+    "    turning_angles = np.diff(angles)\n",
+    "    return turning_angles"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PANEL"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run algorithm\n",
-    "n_steps = pnw.IntSlider(name='Number of steps', width = 380, value=10, step=10, start=10, end=10000)\n",
-    "s_x_pos = pnw.IntInput(name='Starting pos X', value=10, step=10, start=-100, end=100)\n",
-    "QRW_exponent = pnw.FloatSlider(name='QRW Exponent', width=380, start=0.1, end=0.9)\n",
-    "alpha = pnw.FloatSlider(name='Alpha', width=380, value=1.0, start=0.1, end=1.0)\n",
-    "metric = pn.widgets.Select(name='Metric', options={'PL': 0, 'MSD': 1})"
+    "#The basic structure of the panel is defined\n",
+    "\n",
+    "panel_layout= pn.Column(\n",
+    "    pn.Row('Panel of Random Walks'),\n",
+    "    pn.Row('Parameters Configuration'),\n",
+    "    pn.Row('Viewing Walks')\n",
+    ")"
    ]
   },
   {
